force-app/main/default/objects/ServiceContractDecisionApplication__c/ServiceContractDecisionApplication__c.object-meta.xml
<CustomObject>
    <label>サービス_決裁申請</label>
    <nameField>
        <label>サービス_決裁申請名</label>
        <type>Text</type>
    </nameField>
    <sharingModel>Private</sharingModel>
</CustomObject>