force-app/main/default/objects/ServiceContractDecisionApplication__c/fields/ApplicationGenericSignature__c.field-meta.xml
<CustomField>
    <fullName>ApplicationGenericSignature__c</fullName>
    <label>汎用メール署名_申入れ</label>
    <length>255</length>
    <type>Text</type>
</CustomField>