force-app/main/default/objects/ServiceContractDecisionApplication__c/fields/CancelApplicationDestination__c.field-meta.xml
<CustomField>
    <fullName>CancelApplicationDestination__c</fullName>
    <label>申請先_解約</label>
    <length>255</length>
    <type>Text</type>
</CustomField>