force-app/main/default/objects/ServiceContractDecisionApplication__c/fields/CancelApplicationMethod__c.field-meta.xml
<CustomField>
    <fullName>CancelApplicationMethod__c</fullName>
    <label>申請方法_解約</label>
    <length>255</length>
    <type>Text</type>
</CustomField>