force-app/main/default/objects/ServiceContractDecisionApplication__c/fields/CancelApplicationNote__c.field-meta.xml
<CustomField>
    <fullName>CancelApplicationNote__c</fullName>
    <label>申請時注意事項_解約</label>
    <length>255</length>
    <type>Text</type>
</CustomField>