force-app/main/default/objects/ServiceContractDecisionApplication__c/fields/CancelDecisionType__c.field-meta.xml
<CustomField>
    <fullName>CancelDecisionType__c</fullName>
    <label>決裁種別_解約</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>DecisionType</valueSetName>
    </valueSet>
</CustomField>