force-app/main/default/objects/ServiceContractDecisionApplication__c/fields/ChangeApplicationDestination__c.field-meta.xml
<CustomField>
    <fullName>ChangeApplicationDestination__c</fullName>
    <label>申請先_入替</label>
    <length>255</length>
    <type>Text</type>
</CustomField>