force-app/main/default/objects/ServiceContractDecisionApplication__c/fields/ChangeApplicationNote__c.field-meta.xml
<CustomField>
    <fullName>ChangeApplicationNote__c</fullName>
    <label>申請時注意事項_入替</label>
    <length>255</length>
    <type>Text</type>
</CustomField>