force-app/main/default/objects/ServiceContractDecisionApplication__c/fields/ChangeApplicationSource__c.field-meta.xml
<CustomField>
    <fullName>ChangeApplicationSource__c</fullName>
    <label>申請元_入替</label>
    <length>255</length>
    <type>Text</type>
</CustomField>