force-app/main/default/objects/ServiceContractDecisionApplication__c/fields/ChangeDecisionTypeDel__c.field-meta.xml
<CustomField>
    <fullName>ChangeDecisionTypeDel__c</fullName>
    <label>決裁種別_入替</label>
    <length>255</length>
    <type>Text</type>
</CustomField>