force-app/main/default/objects/ServiceContractDecisionApplication__c/fields/CHApprovalDueDate__c.field-meta.xml
<CustomField>
    <fullName>CHApprovalDueDate__c</fullName>
    <label>承認期日（入替）</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>