force-app/main/default/objects/ServiceContractDecisionApplication__c/fields/CLApprovalDueDate__c.field-meta.xml
<CustomField>
    <fullName>CLApprovalDueDate__c</fullName>
    <label>承認期日（解約精算）</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>