force-app/main/default/objects/ServiceContractDecisionApplication__c/fields/CompanyDecisionApplicationDocument__c.field-meta.xml
<CustomField>
    <fullName>CompanyDecisionApplicationDocument__c</fullName>
    <label>企業決裁申請書類</label>
    <length>255</length>
    <type>Text</type>
</CustomField>