force-app/main/default/objects/ServiceContractDecisionApplication__c/fields/CompanyDecisionApplicationMethod__c.field-meta.xml
<CustomField>
    <fullName>CompanyDecisionApplicationMethod__c</fullName>
    <label>企業決裁申請方法</label>
    <length>255</length>
    <type>Text</type>
</CustomField>