force-app/main/default/objects/ServiceContractDecisionApplication__c/fields/CompanyDecisionApplicationSpecifyTime__c.field-meta.xml
<CustomField>
    <fullName>CompanyDecisionApplicationSpecifyTime__c</fullName>
    <label>企業決裁申請指定時間</label>
    <length>255</length>
    <type>Text</type>
</CustomField>