force-app/main/default/objects/ServiceContractDecisionApplication__c/fields/CompanyOwnedChangeGenericSignature__c.field-meta.xml
<CustomField>
    <fullName>CompanyOwnedChangeGenericSignature__c</fullName>
    <label>汎用メール署名_社有入替</label>
    <length>255</length>
    <type>Text</type>
</CustomField>