force-app/main/default/objects/ServiceContractDecisionApplication__c/fields/ContractChangeCompanyApplicationMethod__c.field-meta.xml
<CustomField>
    <fullName>ContractChangeCompanyApplicationMethod__c</fullName>
    <label>申請方法_名変【個→法】</label>
    <length>255</length>
    <type>Text</type>
</CustomField>