force-app/main/default/objects/ServiceContractDecisionApplication__c/fields/ContractChangeCompanyApplicationSource__c.field-meta.xml
<CustomField>
    <fullName>ContractChangeCompanyApplicationSource__c</fullName>
    <label>申請元_名変【個→法】</label>
    <length>255</length>
    <type>Text</type>
</CustomField>