force-app/main/default/objects/ServiceContractDecisionApplication__c/fields/ContractChangeCompanyAttachedDocument__c.field-meta.xml
<CustomField>
    <fullName>ContractChangeCompanyAttachedDocument__c</fullName>
    <label>添付書類名_名変【個→法】</label>
    <length>255</length>
    <type>Text</type>
</CustomField>