force-app/main/default/objects/ServiceContractDecisionApplication__c/fields/ContractChangeCompanyDecisionType__c.field-meta.xml
<CustomField>
    <fullName>ContractChangeCompanyDecisionType__c</fullName>
    <label>決裁種別_名変【個→法】</label>
    <length>255</length>
    <type>Text</type>
</CustomField>