force-app/main/default/objects/ServiceContractDecisionApplication__c/fields/ContractChangeDecisionMethod__c.field-meta.xml
<CustomField>
    <fullName>ContractChangeDecisionMethod__c</fullName>
    <label>決裁方法名変</label>
    <length>255</length>
    <type>Text</type>
</CustomField>