force-app/main/default/objects/ServiceContractDecisionApplication__c/fields/ContractChangeSelfApplication__c.field-meta.xml
<CustomField>
    <fullName>ContractChangeSelfApplication__c</fullName>
    <label>申請先_名変【法→個】</label>
    <length>255</length>
    <type>Text</type>
</CustomField>