force-app/main/default/objects/ServiceContractDecisionApplication__c/fields/ContractChangeSelfApplicationMethod__c.field-meta.xml
<CustomField>
    <fullName>ContractChangeSelfApplicationMethod__c</fullName>
    <label>申請方法_名変【法→個】</label>
    <length>255</length>
    <type>Text</type>
</CustomField>