force-app/main/default/objects/ServiceContractDecisionApplication__c/fields/ContractChangeSelfApplicationSource__c.field-meta.xml
<CustomField>
    <fullName>ContractChangeSelfApplicationSource__c</fullName>
    <label>申請元_名変【法→個】</label>
    <length>255</length>
    <type>Text</type>
</CustomField>