force-app/main/default/objects/ServiceContractDecisionApplication__c/fields/ContractManagementGenericSignature__c.field-meta.xml
<CustomField>
    <fullName>ContractManagementGenericSignature__c</fullName>
    <label>汎用メール署名_契約管理</label>
    <length>255</length>
    <type>Text</type>
</CustomField>