force-app/main/default/objects/ServiceContractDecisionApplication__c/fields/IsApplicationSpecialCorrespondence__c.field-meta.xml
<CustomField>
    <fullName>IsApplicationSpecialCorrespondence__c</fullName>
    <label>申請特殊対応フラグ</label>
    <length>255</length>
    <type>Text</type>
</CustomField>