force-app/main/default/objects/ServiceContractDecisionApplication__c/fields/IsChangeAttachedDocument__c.field-meta.xml
<CustomField>
    <fullName>IsChangeAttachedDocument__c</fullName>
    <label>添付書類有無_入替</label>
    <length>255</length>
    <type>Text</type>
</CustomField>