force-app/main/default/objects/ServiceContractDecisionApplication__c/fields/IsGenericWebCorrespondence__c.field-meta.xml
<CustomField>
    <fullName>IsGenericWebCorrespondence__c</fullName>
    <label>汎用ＷＥＢ_対応フラグ</label>
    <length>255</length>
    <type>Text</type>
</CustomField>