force-app/main/default/objects/ServiceContractDecisionApplication__c/fields/IsNewAttachedDocument__c.field-meta.xml
<CustomField>
    <fullName>IsNewAttachedDocument__c</fullName>
    <label>添付書類有無_新規</label>
    <length>255</length>
    <type>Text</type>
</CustomField>