force-app/main/default/objects/ServiceContractDecisionApplication__c/fields/IsRenewalAttachedDocument__c.field-meta.xml
<CustomField>
    <fullName>IsRenewalAttachedDocument__c</fullName>
    <label>添付書類有無_更新</label>
    <length>255</length>
    <type>Text</type>
</CustomField>