force-app/main/default/objects/ServiceContractDecisionApplication__c/fields/IsRepairAttachedDocument__c.field-meta.xml
<CustomField>
    <fullName>IsRepairAttachedDocument__c</fullName>
    <label>添付書類有無_修繕</label>
    <length>255</length>
    <type>Text</type>
</CustomField>