force-app/main/default/objects/ServiceContractDecisionApplication__c/fields/IsTermsChangeAttachedDocument__c.field-meta.xml
<CustomField>
    <fullName>IsTermsChangeAttachedDocument__c</fullName>
    <label>添付書類有無_条件変更</label>
    <length>255</length>
    <type>Text</type>
</CustomField>