force-app/main/default/objects/ServiceContractDecisionApplication__c/fields/LEApprovalDueDate__c.field-meta.xml
<CustomField>
    <fullName>LEApprovalDueDate__c</fullName>
    <label>承認期日（リーガル）</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>