force-app/main/default/objects/ServiceContractDecisionApplication__c/fields/LegalApplicationDecisionMethod__c.field-meta.xml
<CustomField>
    <fullName>LegalApplicationDecisionMethod__c</fullName>
    <label>リーガル申請決裁方法</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SNT決裁</fullName>
            </value>
            <value>
                <fullName>企業決裁</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>