force-app/main/default/objects/ServiceContractDecisionApplication__c/fields/MediationNewGenericSignature__c.field-meta.xml
<CustomField>
    <fullName>MediationNewGenericSignature__c</fullName>
    <label>汎用メール署名_斡旋新規</label>
    <length>255</length>
    <type>Text</type>
</CustomField>