force-app/main/default/objects/ServiceContractDecisionApplication__c/fields/NewApplicationNote__c.field-meta.xml
<CustomField>
    <fullName>NewApplicationNote__c</fullName>
    <label>申請時注意事項_新規</label>
    <length>255</length>
    <type>Text</type>
</CustomField>