force-app/main/default/objects/ServiceContractDecisionApplication__c/fields/NewApplicationSource__c.field-meta.xml
<CustomField>
    <fullName>NewApplicationSource__c</fullName>
    <label>申請元_新規</label>
    <length>255</length>
    <type>Text</type>
</CustomField>