force-app/main/default/objects/ServiceContractDecisionApplication__c/fields/NewDecisionMethodMemo__c.field-meta.xml
<CustomField>
    <fullName>NewDecisionMethodMemo__c</fullName>
    <label>決裁方法新規メモ</label>
    <length>255</length>
    <type>Text</type>
</CustomField>