force-app/main/default/objects/ServiceContractDecisionApplication__c/fields/NewDecisionTypeDel__c.field-meta.xml
<CustomField>
    <fullName>NewDecisionTypeDel__c</fullName>
    <label>決裁種別_新規</label>
    <length>255</length>
    <type>Text</type>
</CustomField>