force-app/main/default/objects/ServiceContractDecisionApplication__c/fields/NMApprovalDueDate__c.field-meta.xml
<CustomField>
    <fullName>NMApprovalDueDate__c</fullName>
    <label>承認期日（新規）</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>