force-app/main/default/objects/ServiceContractDecisionApplication__c/fields/OwendDecisionApplicationMethod__c.field-meta.xml
<CustomField>
    <fullName>OwendDecisionApplicationMethod__c</fullName>
    <label>ＳＮＴ決裁申請方法</label>
    <length>255</length>
    <type>Text</type>
</CustomField>