force-app/main/default/objects/ServiceContractDecisionApplication__c/fields/OwendDecisionApplicationSpecifyTime__c.field-meta.xml
<CustomField>
    <fullName>OwendDecisionApplicationSpecifyTime__c</fullName>
    <label>ＳＮＴ決裁申請指定時間</label>
    <length>255</length>
    <type>Text</type>
</CustomField>