force-app/main/default/objects/ServiceContractDecisionApplication__c/fields/OwendDecisionEndNotice__c.field-meta.xml
<CustomField>
    <fullName>OwendDecisionEndNotice__c</fullName>
    <label>SNT決裁終了通知</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>必要</fullName>
            </value>
            <value>
                <fullName>不要</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>