force-app/main/default/objects/ServiceContractDecisionApplication__c/fields/OwendDecisionNote__c.field-meta.xml
<CustomField>
    <fullName>OwendDecisionNote__c</fullName>
    <label>SNT決裁注意事項</label>
    <length>255</length>
    <type>Text</type>
</CustomField>