force-app/main/default/objects/ServiceContractDecisionApplication__c/fields/RenewalDecisionType__c.field-meta.xml
<CustomField>
    <fullName>RenewalDecisionType__c</fullName>
    <label>決裁種別_更新</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>DecisionType</valueSetName>
    </valueSet>
</CustomField>