force-app/main/default/objects/ServiceContractDecisionApplication__c/fields/RepairApplicationDestination__c.field-meta.xml
<CustomField>
    <fullName>RepairApplicationDestination__c</fullName>
    <label>申請先_修繕</label>
    <length>255</length>
    <type>Text</type>
</CustomField>