force-app/main/default/objects/ServiceContractDecisionApplication__c/fields/RepairApplicationSource__c.field-meta.xml
<CustomField>
    <fullName>RepairApplicationSource__c</fullName>
    <label>申請元_修繕</label>
    <length>255</length>
    <type>Text</type>
</CustomField>