force-app/main/default/objects/ServiceContractDecisionApplication__c/fields/RepairAttachedDocumentName__c.field-meta.xml
<CustomField>
    <fullName>RepairAttachedDocumentName__c</fullName>
    <label>添付書類名_修繕</label>
    <length>255</length>
    <type>Text</type>
</CustomField>