force-app/main/default/objects/ServiceContractDecisionApplication__c/fields/TermsChangeApplicationDestination__c.field-meta.xml
<CustomField>
    <fullName>TermsChangeApplicationDestination__c</fullName>
    <label>申請先_条件変更</label>
    <length>255</length>
    <type>Text</type>
</CustomField>