force-app/main/default/objects/ServiceContractDecisionApplication__c/fields/TermsChangeApplicationFormCommentText__c.field-meta.xml
<CustomField>
    <fullName>TermsChangeApplicationFormCommentText__c</fullName>
    <label>賃貸借条件変更申請書企業別コメント本文</label>
    <length>255</length>
    <type>Text</type>
</CustomField>