force-app/main/default/objects/ServiceContractDecisionApplication__c/fields/TermsChangeApplicationFormCommentTitle__c.field-meta.xml
<CustomField>
    <fullName>TermsChangeApplicationFormCommentTitle__c</fullName>
    <label>賃貸借条件変更申請書企業別コメントタイトル</label>
    <length>255</length>
    <type>Text</type>
</CustomField>