force-app/main/default/objects/ServiceContractDecisionApplication__c/fields/TermsChangeAttachedDocumentName__c.field-meta.xml
<CustomField>
    <fullName>TermsChangeAttachedDocumentName__c</fullName>
    <label>添付書類名_条件変更</label>
    <length>255</length>
    <type>Text</type>
</CustomField>