force-app/main/default/objects/ServiceContractDecisionApplication__c/fields/TermsChangeDecisionType__c.field-meta.xml
<CustomField>
    <fullName>TermsChangeDecisionType__c</fullName>
    <label>決裁種別_条件変更</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>DecisionType</valueSetName>
    </valueSet>
</CustomField>