force-app/main/default/objects/ServiceContractDecisionApplication__c/fields/TermsChangeDecisionTypeDel__c.field-meta.xml
<CustomField>
    <fullName>TermsChangeDecisionTypeDel__c</fullName>
    <label>決裁種別_条件変更</label>
    <length>255</length>
    <type>Text</type>
</CustomField>