force-app/main/default/objects/ServiceContractDecisionApplication__c/fields/WorkArrangeApplicationMethod__c.field-meta.xml
<CustomField>
    <fullName>WorkArrangeApplicationMethod__c</fullName>
    <label>申請方法_作業手配</label>
    <length>255</length>
    <type>Text</type>
</CustomField>