force-app/main/default/objects/ServiceContractDecisionApplication__c/fields/WorkArrangeApplicationNote__c.field-meta.xml
<CustomField>
    <fullName>WorkArrangeApplicationNote__c</fullName>
    <label>申請時注意事項_作業手配</label>
    <length>255</length>
    <type>Text</type>
</CustomField>