force-app/main/default/objects/ServiceContractDecisionApplication__c/fields/WorkArrangeDecisionType__c.field-meta.xml
<CustomField>
    <fullName>WorkArrangeDecisionType__c</fullName>
    <label>決裁種別_作業手配</label>
    <length>255</length>
    <type>Text</type>
</CustomField>